examples/test/testpolicy18272.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18272
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key34: value37
      key48: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value18
          key47: value20
      podSelector:
        matchLabels:
          key23: value17
          key44: value34
